test/valid/58215_addToArrayIndex/addToArrayIndex.agu
-- Author: 58215, Manuel Lourenço

let addToArrayIndex (a,i,n) : Int[] -> Int -> Int -> Int[] =
    set a[i] = a[i] + (n);
    a 

let main : Unit =
    let arr : Int[] = new Int [7 | 3];
    set arr = addToArrayIndex(arr, 4, 5);
    print(arr[4]); print(arr[2])